# compress_tool

./: pyproject.toml
compress_tool/: open_and_compress.py
tests/: test_compress_tool.py
